# packagePythonProject

./: README.md  pyproject.toml
.github/workflows/: main.yml
.pdm-build/: pyproject.toml
src/: hello.py
tests/: test_1.py
