[project]
name = "hello"
version = "0.1.0"
description = "Demonstrate pdm"
authors = [
    { name = "Philip R Brenan", email = "philiprbrenan@gmail.com" },
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"

[project.license]
text = "MIT"

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
